tests/invalid/simple/ConstrainedInt_Invalid_11.whiley
// this is a comment!
define odd as { 1,3,5 }

void System::main([string] args):
    odd y
    y = 2
    print str(y)
